<resources>
    <string name="app_name">MusicLine</string>
    <string name="header_register">Register</string>
    <string name="header_personal">Personal information</string>
    <string name="register_name"><font size="15">Name: </font></string>
    <string name="register_email"><font size="15">E-mail: </font></string>
    <string name="register_nif"><font size="15">NIF: </font></string>
    <string name="header_card">Card information</string>
    <string name="register_type"><font size="15">Type: </font></string>
    <string name="register_visa"><font size="15">VISA</font></string>
    <string name="register_masterCard"><font size="15">MasterCard</font></string>
    <string name="register_americanExpress"><font size="15">American Express</font></string>
    <string name="register_cardNumber"><font size="15">Number: </font></string>
    <string name="register_cardValidity"><font size="15">Validity (MM/AA): </font></string>
    <string name="register_button"><font size="15">Register</font></string>

    <!-- Error messages -->
    <string name="error_name">Insert a valid name with only letters</string>
    <string name="error_username">Insert a valid username with letters, numbers, points, dashes or underscores with length higher than > 3</string>
    <string name="error_email">Insert a valid e-mail</string>
    <string name="error_password">Insert a valid alphanumeric password with length higher than 8</string>
    <string name="error_confirmPass">Password do not match </string>
    <string name="error_nif">Insert a valid NIF</string>
    <string name="error_type">Choose one</string>
    <string name="error_cardNumber">Insert a valid card number</string>
    <string name="title_activity_homepage">MusicLine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--NavigationDrawer strings -->
    <string name="nav_shows">Shows</string>
    <string name="nav_cafeteria">Cafeteria</string>
    <string name="nav_myTickets">My Tickets</string>
    <string name="nav_myVouchers">My Vouchers</string>
    <string name="nav_myOrders"> My Orders</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Cafeteria strings -->
    <string name="place_order">Place your order:</string>
    <string name="coffee">Coffee - 1,00€</string>
    <string name="soda">Soda - 1,50€</string>
    <string name="popcorn">Popcorn - 2,00€</string>
    <string name="sandwich">Sandwich - 3,00€</string>
    <string name="addVouchers_button">Add vouchers</string>
    <string name="order_button">Order</string>

    <!--Shows strings -->
    <string name="next_shows">Next shows</string>
    <string name="date_description">Date: </string>
    <string name="price_description">Price: </string>
    <string name="place_description">Place:</string>
    <string name="total_price">Total Price: </string>
    <string name="nr_tickets">Nr. Tickets: </string>
    <string name="buy_tickets">Purchase tickets</string>

    <!-- Tickets strings -->
    <string name="my_tickets">My Tickets</string>
    <string name="validate">Validate Tickets</string>

    <!-- Vouchers strings -->
    <string name="my_vouchers">My Vouchers</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="voucher_to_user">Vouchers to use</string>
    <string name="add_voucher">Add</string>

    <!-- Orders strings -->
    <string name="my_orders">My Orders</string>


</resources>
