<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shows"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/nav_shows" />
        <item
            android:id="@+id/nav_cafeteria"
            android:icon="@drawable/ic_free_breakfast_black_24dp"
            android:title="@string/nav_cafeteria" />
        <item
            android:id="@+id/nav_myTickets"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/nav_myTickets" />
        <item
            android:id="@+id/nav_myVouchers"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/nav_myVouchers"/>
    </group>
</menu>
